--- a/config/baselines/crnn-jtd+pijama.yaml
+++ b/config/baselines/crnn-jtd+pijama.yaml
@@ -11,6 +11,7 @@ model_cfg:
   has_gru: True
 checkpoint_cfg:
   save_checkpoints: True
+  load_checkpoints: True
   checkpoint_after_n_epochs: 10
 mlflow_cfg:
   use: False
