--- a/config/default.yaml
+++ b/config/default.yaml
@@ -3,14 +3,16 @@ run: default
 learning_rate: 1.0e-3
 batch_size: 12
 epochs: 100
+# We just use a small toy dataset for debug purposes
 dataset_cfg:
-  train_size: None
-  test_size: None
+  train_size: 100
+  test_size: 100
 model_cfg:
   encoder: crnn
   has_gru: True
 checkpoint_cfg:
   save_checkpoints: True
+  load_checkpoints: True
   checkpoint_after_n_epochs: 10
 mlflow_cfg:
   use: False
