--- a/config/baselines/crnn-ibn-jtd+pijama.yaml
+++ b/config/baselines/crnn-ibn-jtd+pijama.yaml
@@ -8,7 +8,7 @@ dataset_cfg:
   test_size: null
 encoder_module: crnn
 model_cfg:
-  use_ibn: False
+  use_ibn: True
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
