--- a/config/default.yaml
+++ b/config/default.yaml
@@ -7,9 +7,9 @@ epochs: 100
 dataset_cfg:
   train_size: 100
   test_size: 100
+encoder_module: crnn
 model_cfg:
-  encoder: crnn
-  has_gru: True
+  use_ibn: False
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
