--- a/config/baselines/cnn-jtd+pijama.yaml
+++ b/config/baselines/cnn-jtd+pijama.yaml
@@ -3,9 +3,12 @@ run: cnn-jtd+pijama
 learning_rate: 1.0e-4
 batch_size: 12
 epochs: 100
-dataset_cfg:
-  train_size: null
-  test_size: null
+train_dataset_cfg:
+  n_clips: null
+  normalize_velocity: False
+test_dataset_cfg:
+  n_clips: null
+  normalize_velocity: False
 encoder_module: cnn
 model_cfg:
   use_ibn: False
