--- a/config/baselines/crnn-ibn-jtd+pijama.yaml
+++ b/config/baselines/crnn-ibn-jtd+pijama.yaml
@@ -1,14 +1,16 @@
 experiment: baselines
-run: crnn-jtd+pijama
+run: crnn-ibn-jtd+pijama
 learning_rate: 1.0e-4
 batch_size: 12
 epochs: 100
 train_dataset_cfg:
   n_clips: null
   normalize_velocity: False
+  data_augmentation: True
 test_dataset_cfg:
   n_clips: null
   normalize_velocity: False
+  data_augmentation: False
 encoder_module: crnn
 model_cfg:
   use_ibn: True
