--- a/config/baselines/crnn-jtd+pijama.yaml
+++ b/config/baselines/crnn-jtd+pijama.yaml
@@ -5,12 +5,12 @@ batch_size: 12
 epochs: 100
 train_dataset_cfg:
   n_clips: null
-  normalize_velocity: False
-  data_augmentation: True
+  normalize_velocity: True
+  multichannel: False
 test_dataset_cfg:
   n_clips: null
-  normalize_velocity: False
-  data_augmentation: False
+  normalize_velocity: True
+  multichannel: False
 encoder_module: crnn
 model_cfg:
   use_ibn: False
