--- a/config/individual-concepts/crnn-jtd+pijama-rhythmonly_augment50.yaml
+++ b/config/individual-concepts/crnn-jtd+pijama-rhythmonly_augment50.yaml
@@ -1,22 +1,29 @@
-experiment: disentangle
-run: disentangle-jtd+pijama-nomask
+experiment: individual-concepts
+run: crnn-jtd+pijama-rhythmonly_augment50
 learning_rate: 1.0e-4
-batch_size: 1
+batch_size: 12
 epochs: 100
 train_dataset_cfg:
   n_clips: null
   normalize_velocity: True
-  data_augmentation: True
   multichannel: True
+  use_concepts: [ 2 ]
+  extractor_cfg:
+    rhythm:
+      data_augmentation: True
+      augmentation_probability: 0.5
+      shift_limit: 0.2
 test_dataset_cfg:
   n_clips: null
   normalize_velocity: True
-  data_augmentation: False
   multichannel: True
-encoder_module: disentangle
+  use_concepts: [ 2 ]
+  extractor_cfg:
+    rhythm:
+      data_augmentation: False
+encoder_module: crnn
 model_cfg:
-  use_gru: True
-  use_masking: False
+  use_ibn: False
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
