--- a/config/disentangle/disentangle-jtd+pijama-mask30concept1-augment50-8heads-8layers.yaml
+++ b/config/disentangle/disentangle-jtd+pijama-mask30concept1-augment50-8heads-8layers.yaml
@@ -1,6 +1,6 @@
 experiment: disentangle
-run: disentangle-jtd+pijama-mask30concept1-augment50-2heads
-learning_rate: 1.0e-4
+run: disentangle-jtd+pijama-mask30concept1-augment50-8heads-8layers
+learning_rate: 1.0e-3
 batch_size: 7
 epochs: 100
 train_dataset_cfg:
@@ -43,7 +43,9 @@ model_cfg:
   use_masking: True
   mask_probability: 0.3
   max_masked_concepts: 1
-  num_attention_heads: 2
+  num_attention_heads: 8
+  num_layers: 8
+  pool_type: max
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
