--- a/config/disentangle/disentangle-jtd+pijama-mask30concept3-augment50-2heads-4layers.yaml
+++ b/config/disentangle/disentangle-jtd+pijama-mask30concept3-augment50-2heads-4layers.yaml
@@ -1,5 +1,5 @@
 experiment: disentangle
-run: disentangle-jtd+pijama-mask30-augment50-2heads
+run: disentangle-jtd+pijama-mask30concept1-augment50-2heads-4layers
 learning_rate: 1.0e-4
 batch_size: 7
 epochs: 100
@@ -44,6 +44,8 @@ model_cfg:
   mask_probability: 0.3
   max_masked_concepts: 3
   num_attention_heads: 2
+  num_layers: 4
+  pool_type: avg
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
