Configs for experiments w/o self-attention

--- a/config/disentangle/disentangle-noattention/disentangle-jtd+pijama-mask30concept1-augment50-noattention-avgpool.yaml
+++ b/config/disentangle/disentangle-noattention/disentangle-jtd+pijama-mask30concept1-augment50-noattention-avgpool.yaml
@@ -1,4 +1,4 @@
-experiment: disentangle
+experiment: disentangle-noattention
 run: disentangle-jtd+pijama-mask30concept1-augment50-noattention-avgpool
 learning_rate: 1.0e-4
 batch_size: 5
