--- a/config/baselines/cnn-jtd+pijama.yaml
+++ b/config/baselines/cnn-jtd+pijama.yaml
@@ -17,7 +17,8 @@ test_dataset_cfg:
   data_augmentation: False
 encoder_module: cnn
 model_cfg:
-  use_ibn: False
+  pool_type: max
+  norm_type: bn
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
