--- a/config/baselines/crnn-jtd+pijama.yaml
+++ b/config/baselines/crnn-jtd+pijama.yaml
@@ -17,7 +17,8 @@ test_dataset_cfg:
   jitter_start: False
 encoder_module: crnn
 model_cfg:
-  use_ibn: False
+  pool_type: max
+  norm_type: bn
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
