--- a/config/baselines/resnet50-jtd+pijama.yaml
+++ b/config/baselines/resnet50-jtd+pijama.yaml
@@ -19,6 +19,8 @@ test_dataset_cfg:
 encoder_module: resnet50
 model_cfg:
   layers: [ 3, 4, 6, 3 ]
+  pool_type: avg
+  norm_type: bn
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
