--- a/config/baselines/crnn-ibn-jtd+pijama.yaml
+++ b/config/baselines/crnn-ibn-jtd+pijama.yaml
@@ -1,6 +1,5 @@
 experiment: baselines
 run: crnn-ibn-jtd+pijama
-learning_rate: 1.0e-4    # originally 0.001
 batch_size: 12
 epochs: 100
 train_dataset_cfg:
@@ -19,6 +18,9 @@ encoder_module: crnn
 model_cfg:
   pool_type: gem
   norm_type: ibn
+optim_type: adam
+optim_cfg:
+  lr: 1.0e-3
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
