--- a/config/baselines/resnet50-jtd+pijama.yaml
+++ b/config/baselines/resnet50-jtd+pijama.yaml
@@ -1,6 +1,5 @@
 experiment: baselines
 run: resnet50-jtd+pijama
-learning_rate: 0.01    # NB. used SGD with momentum, weight regularisation, and LR scheduling in original paper!
 batch_size: 5
 epochs: 100
 classify_dataset: False
@@ -21,6 +20,13 @@ model_cfg:
   layers: [ 3, 4, 6, 3 ]
   pool_type: avg
   norm_type: bn
+# These are just taken directly from https://github.com/CPJKU/composer_concept/blob/main/classifier/tools/trainer.py
+optim_type: sgd
+optim_cfg:
+  lr: 0.01
+  momentum: 0.9
+  nesterov: False
+  weight_decay: 0.0001
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
