--- a/config/baselines/resnet50-jtd+pijama.yaml
+++ b/config/baselines/resnet50-jtd+pijama.yaml
@@ -27,6 +27,9 @@ optim_cfg:
   momentum: 0.9
   nesterov: False
   weight_decay: 0.0001
+sched_type: cosine
+sched_cfg:
+  T_max: 100
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
