--- a/config/baselines/resnet50-jtd+pijama-augment.yaml
+++ b/config/baselines/resnet50-jtd+pijama-augment.yaml
@@ -1,5 +1,5 @@
 experiment: baselines
-run: crnn-jtd+pijama
+run: resnet50-jtd+pijama-augment
 batch_size: 5
 epochs: 100
 data_split_dir: 20class_80min
@@ -8,21 +8,30 @@ train_dataset_cfg:
   n_clips: null
   normalize_velocity: True
   multichannel: False
-  data_augmentation: False
-  jitter_start: False
+  data_augmentation: True
+  augmentation_probability: 0.5
+  jitter_start: True
 test_dataset_cfg:
   n_clips: null
   normalize_velocity: True
   multichannel: False
   data_augmentation: False
   jitter_start: False
-encoder_module: crnn
+encoder_module: resnet50
 model_cfg:
-  pool_type: max
+  layers: [ 3, 4, 6, 3 ]
+  pool_type: avg
   norm_type: bn
-optim_type: adam
+# These are just taken directly from https://github.com/CPJKU/composer_concept/blob/main/classifier/tools/trainer.py
+optim_type: sgd
 optim_cfg:
-  lr: 1.0e-3
+  lr: 0.01
+  momentum: 0.9
+  nesterov: False
+  weight_decay: 0.0001
+sched_type: cosine
+sched_cfg:
+  T_max: 100
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
