--- a/config/disentangle-architecture/disentangle-jtd+pijama-8conv3pool-mask30concept3-augment50-noattention-avgpool.yaml
+++ b/config/disentangle-architecture/disentangle-jtd+pijama-8conv3pool-mask30concept3-augment50-noattention-avgpool.yaml
@@ -1,6 +1,6 @@
 experiment: disentangle-architecture
 run: disentangle-jtd+pijama-8conv3pool-mask30concept3-augment50-noattention-avgpool
-batch_size: 2
+batch_size: 20
 epochs: 100
 data_split_dir: 20class_80min
 classify_dataset: False
@@ -44,4 +44,5 @@ checkpoint_cfg:
   checkpoint_after_n_epochs: 10
 mlflow_cfg:
   use: True
+  run_id: 594c35956ea34271a9981f85058dcb5d
   tracking_uri: http://127.0.0.1:5000
