--- a/config/disentangle-channel/disentangle-jtd+pijama-4conv3pool-mask30concept3-augment50-4heads-maxpool.yaml
+++ b/config/disentangle-channel/disentangle-jtd+pijama-4conv3pool-mask30concept3-augment50-4heads-maxpool.yaml
@@ -1,7 +1,9 @@
-experiment: disentangle-noattention
-run: disentangle-jtd+pijama-mask30concept1-augment50-noattention-maxpool
-batch_size: 5
+experiment: disentangle-channel
+run: disentangle-jtd+pijama-4conv3pool-mask30concept3-augment50-4heads-maxpool
+batch_size: 20
 epochs: 100
+data_split_dir: 20class_80min
+classify_dataset: False
 train_dataset_cfg:
   n_clips: null
   normalize_velocity: True
@@ -19,10 +21,10 @@ encoder_module: disentangle
 model_cfg:
   use_gru: True
   use_masking: True
-  use_attention: False
+  use_attention: True
   mask_probability: 0.3
-  max_masked_concepts: 1
-  num_attention_heads: 2
+  max_masked_concepts: 3
+  num_attention_heads: 4
   layers: [
     { in_channels: 1, out_channels: 64, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
     { in_channels: 64, out_channels: 128, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
@@ -39,4 +41,5 @@ checkpoint_cfg:
   checkpoint_after_n_epochs: 10
 mlflow_cfg:
   use: True
-  tracking_uri: http://127.0.0.1:8000
+  run_id: ce95a3fb91bd451f886c52ba885b5c15
+  tracking_uri: http://127.0.0.1:5000
