--- a/config/disentangle-architecture-2/disentangle-jtd+pijama-4conv2pool-mask30concept3-augment50-noattention-avgpool.yaml
+++ b/config/disentangle-architecture-2/disentangle-jtd+pijama-4conv2pool-mask30concept3-augment50-noattention-avgpool.yaml
@@ -1,5 +1,5 @@
-experiment: disentangle-architecture
-run: disentangle-jtd+pijama-8conv3pool-mask30concept3-augment50-noattention-avgpool
+experiment: disentangle-architecture-2
+run: disentangle-jtd+pijama-4conv2pool-mask30concept3-augment50-noattention-avgpool
 batch_size: 20
 epochs: 100
 data_split_dir: 20class_80min
@@ -26,13 +26,9 @@ model_cfg:
   max_masked_concepts: 3
   layers: [
     { in_channels: 1, out_channels: 64, conv_kernel_size: 3, has_pool: False },
-    { in_channels: 64, out_channels: 64, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
-    { in_channels: 64, out_channels: 128, conv_kernel_size: 3, has_pool: False },
-    { in_channels: 128, out_channels: 128, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
+    { in_channels: 64, out_channels: 128, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
     { in_channels: 128, out_channels: 256, conv_kernel_size: 3, has_pool: False },
-    { in_channels: 256, out_channels: 256, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
-    { in_channels: 256, out_channels: 512, conv_kernel_size: 3, has_pool: False },
-    { in_channels: 512, out_channels: 512, conv_kernel_size: 3, has_pool: False }
+    { in_channels: 256, out_channels: 512, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 4 }
   ]
   pool_type: avg
 optim_type: adam
@@ -44,5 +40,5 @@ checkpoint_cfg:
   checkpoint_after_n_epochs: 10
 mlflow_cfg:
   use: True
-  run_id: 594c35956ea34271a9981f85058dcb5d
+  run_id: f14be7d5d41c4542850e6181ff04eca0
   tracking_uri: http://127.0.0.1:5000
