--- a/config/disentangle-mask/disentangle-jtd+pijama-4conv3pool-nomask-augment50-noattention-avgpool.yaml
+++ b/config/disentangle-mask/disentangle-jtd+pijama-4conv3pool-nomask-augment50-noattention-avgpool.yaml
@@ -1,7 +1,9 @@
-experiment: disentangle-noattention
-run: disentangle-jtd+pijama-mask30concept1-augment50-noattention-avgpool
-batch_size: 5
+experiment: disentangle-mask
+run: disentangle-jtd+pijama-4conv3pool-nomask-augment50-noattention-avgpool
+batch_size: 20
 epochs: 100
+data_split_dir: 20class_80min
+classify_dataset: False
 train_dataset_cfg:
   n_clips: null
   normalize_velocity: True
@@ -18,11 +20,8 @@ test_dataset_cfg:
 encoder_module: disentangle
 model_cfg:
   use_gru: True
-  use_masking: True
+  use_masking: False
   use_attention: False
-  mask_probability: 0.3
-  max_masked_concepts: 1
-  num_attention_heads: 2
   layers: [
     { in_channels: 1, out_channels: 64, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
     { in_channels: 64, out_channels: 128, conv_kernel_size: 3, has_pool: True, pool_kernel_size: 2 },
@@ -39,4 +38,5 @@ checkpoint_cfg:
   checkpoint_after_n_epochs: 10
 mlflow_cfg:
   use: True
-  tracking_uri: http://127.0.0.1:8000
+  run_id: ff38960eab764f83b55e31fedfbcf7c5
+  tracking_uri: http://127.0.0.1:5000
