--- a/config/disentangle-channel/disentangle-jtd+pijama-4conv3pool-mask30concept3-augment50-noattention-linearflatten.yaml
+++ b/config/disentangle-channel/disentangle-jtd+pijama-4conv3pool-mask30concept3-augment50-noattention-linearflatten.yaml
@@ -38,6 +38,7 @@ optim_cfg:
 checkpoint_cfg:
   save_checkpoints: True
   load_checkpoints: True
+  checkpoint_dir: /rds/user/hwc31/hpc-work/deep-pianist-identification/checkpoints
   checkpoint_after_n_epochs: 10
 mlflow_cfg:
   use: True
