--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas
-# numpy<2.0.0
+numpy<2.0.0
 scikit-learn
 scipy
 matplotlib
@@ -11,9 +11,9 @@ pyyaml
 tqdm
 pretty-midi
 numba
-# torch
-# torchaudio
-# torchvision
+torch
+torchaudio
+torchvision
 torchmetrics
 mlflow
 tenacity
