--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,3 +41,7 @@ pillow="*"
 beautifulsoup4="*"
 coverage="*"
 adjustText="*"
+unidecode = "^1.4.0"
+sentence-transformers = "^5.2.2"
+pulp = "^3.3.0"
+pytest = "^9.0.2"
