--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python=">=3.10.12"
+python=">=3.10.12,<4.0"
 pandas="*"
 numpy="<2.0.0"
 scikit-learn="*"
@@ -41,3 +41,4 @@ pillow="*"
 beautifulsoup4="*"
 coverage="*"
 adjustText="*"
+aeberscale="0.1.1"
